# staryei

./: .gitignore  CMakeLists.txt  README.md
source/raptor/foundation/: memory.hpp
source/staryei/: CMakeLists.txt  main.cpp
source/staryei/graphics/: CommandBuffer.cpp  CommandBuffer.hpp  GpuDevice.cpp  GpuDevice.hpp  GpuResource.cpp  GpuResource.hpp
source/staryei/shaders/: compute_test.glsl
source/syi/application/: application.cpp  application.hpp  game_application.cpp  game_application.hpp  game_camera.cpp  game_camera.hpp  input.cpp  input.hpp  keys.cpp  keys.hpp  window.cpp  window.hpp
source/syi/foundation/: array.hpp  assert.hpp  bit.cpp  bit.hpp  blob.hpp  blob_serialization.cpp  blob_serialization.hpp  camera.cpp  camera.hpp  color.cpp  color.hpp  data_structures.cpp  data_structures.hpp  file.cpp  file.hpp  gltf.cpp  gltf.hpp  hash_map.hpp  log.cpp  log.hpp  memory.cpp  memory.hpp  memory_utils.hpp  numerics.cpp  numerics.hpp  platform.hpp  process.cpp  process.hpp  relative_data_structures.hpp  resource_manager.cpp  resource_manager.hpp  serialization.cpp  serialization.hpp  service.hpp  service_manager.cpp  service_manager.hpp  string.cpp  string.hpp  time.cpp  time.hpp
